# scheduler-rs

./: .gitignore  Cargo.toml  build.rs  docker-compose.yaml
db/migrations/: 0001_create_tables.sql
proto/v1/: cmn-model.proto  scheduler-model.proto  scheduler-service.proto
setup/infra/: redpanda-console-config.yaml
src/: error.rs  main.rs  prelude.rs  service.rs
src/api/: mod.rs
src/db/: mgm.rs  mod.rs  model.rs  utils.rs
src/db/mgm/: functions.rs  repository.rs
src/utils/: from_apis.rs  from_models.rs  from_prost.rs  mod.rs
