[package]
name = "scheduler-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
futures = "0.3.28"
clap = { version = "4.3.5", features = ["derive"] }
tonic-reflection = "0.9.2"
sqlx = { version="0.6.3", features = ["runtime-tokio-rustls", "postgres","macros",  "chrono", "uuid", "json", "time"]}
sqlx-migrate = { version = "0.6.0" , features = ["cli","postgres"] }
thiserror= "1.0.40"
serde = "1.0.164"
serde_json = "1.0.97"
chrono = { version= "0.4.26", features = ["serde"] }
strum = "0.25"
strum_macros = "0.25"
uuid = {version = "1.3.4", features = ["serde"]}
futures-util = "*"

[build-dependencies]
tonic-build = "0.9.2"
sqlx-migrate = { version = "0.6.0",  features = ["generate"] }

[dev-dependencies]
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
futures-util = "0.3.28"
anyhow = "1.0.71"
